Ensure all logw() messages end in a new line. Only run regenerate_client_dindex in protocol 2. More fixes for manual_delete.
Change-Id: I543ea5bc18e0caacebd33aab067d09004b278949

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,7 @@
     man page as it is missing.
   * Add acl=[0|1] and xattr=[0|1] options so that acls and xattrs can be
     turned on and off at runtime.
+  * Ensure all logw() messages end with a newline.
 
 2015-09-04 Changes in burp-2.0.22:
   * Make protocol2 resume work. Add unit tests for resume components.
