Small bit of extra efficiency when loading rblks.
Change-Id: I44ccf2734d142ba34be0473318354c0ac14185ba

--- a/TODO
+++ b/TODO
@@ -9,7 +9,8 @@ roughly in order of most important to least.
 
 * Need to improve restore speed - come up with a way to efficiently read the
   blocks into memory by looking ahead in the manifests.
-  maybe_copy_data_files_across() is probably broken.
+
+* maybe_copy_data_files_across() is probably broken.
 
 * Make CMD_INTERRUPT work (on restore, maybe others too).
 
