Use the same maximum blocksize as rsync ((int32_t)1<<17). Start test for rs_buf.c. Start test for blocklen.c. Start test for bedup.c.
Change-Id: Ica82b5b9b1b735cb7f2152c5818ae9e269e164db

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Use the same maximum blocksize as rsync ((int32_t)1<<17).
+
 2015-10-31 Changes in burp-2.0.26:
   * Paid for by an anonymous user: add a new screen to the Windows installer
     for choosing 'include' directories.
