Fix status monitor segfault on exit.
Change-Id: Id31f0ac33c6f52d903e877b65e00dd64fc9cfa32

--- a/TODO
+++ b/TODO
@@ -15,7 +15,9 @@ roughly in order of most important to least.
 
 * maybe_copy_data_files_across() is probably broken.
 
-* Make CMD_INTERRUPT work (on restore, maybe others too).
+* Make CMD_INTERRUPT work (on restore).
+
+* Make CMD_INTERRUPT work (on backup phase2).
 
 * Make the status monitor work.
 
