Run 'autoreconf -vif' before making the tar file.
Change-Id: Iab5017f653aadc00b88f4eccf01de015444ffe30

--- a/README
+++ b/README
@@ -12,10 +12,10 @@ for you:
 apt-get install autconf automake libtool make pkg-config check g++ \
 	librsync-dev libz-dev libssl-dev uthash-dev libyajl-dev
 
-Change to the burp source directory and run "autoreconf -vif", "./configure
---prefix=/usr --sysconfdir=/etc/burp --localstatedir=/var" then "make". All
-being well, burp will compile successfully. Then run "make install" and then
-"make install-configs" as root to install. The "make install-configs" command
+Change to the burp source directory and run "./configure --prefix=/usr
+--sysconfdir=/etc/burp --localstatedir=/var" then "make". All being well, burp
+will compile successfully. Then run "make install" and then "make
+install-configs" as root to install. The "make install-configs" command
 will overwrite configuration files in /etc/burp, so you will probably not
 want to do that if you have an existing burp installation.
 
