Another attempt to retry SSL_accept on WANT_READ.
Change-Id: Ieb5f5c760c14c5c30d6804b7f56278f65a977c52

--- a/README
+++ b/README
@@ -9,7 +9,7 @@ you have openssl, zlib, librsync, uthash and yajl libraries and development
 libraries installed. With debian or ubuntu, this command should install them
 for you:
 
-apt-get install autconf automake libtool make pkg-config check g++ \
+apt-get install autoconf automake libtool make pkg-config check g++ \
 	librsync-dev libz-dev libssl-dev uthash-dev libyajl-dev
 
 Change to the burp source directory and run "./configure --prefix=/usr
