Support additional algorithms for passwd option
Historically crypt(3) has only supported the DES algorithm. glibc's
implementation supports additional algorithms such as SHA-256, SHA-512
and, depending on the distribution, Blowfish. These are significantly
stronger than DES.

The function calling crypt(3), check_passwd, had a hardcoded length
check and assumed DES-encrypted passwords. Support for the glibc
extension can be added by passing the encrypted/hashed password directly
as the salt instead of extracting the first two characters. Other
implementations will continue to behave as-is.

This change also fixes a NULL-pointer dereference which would occur when
the crypt(3) function failed.

Signed-off-by: Michael Hanselmann <public@hansmi.ch>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+  * Add support for glibc's additional algorithms in crypt(3)-style passwords
+    ("passwd" configuration option)
+
 2015-07-01 Changes in burp-1.4.40:
   * Fix '-a l' regex so that it isn't split in two at the right-most
     colon.
