--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+  * Add support for glibc's additional algorithms in crypt(3)-style passwords
+    ("passwd" configuration option)
+
 2016-01-31 Changes in burp-2.0.32:
   * Tweak README install instructions.
   * Fix ncurses output option.
