--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Support xattrs and acls in protocol2.
+
 2016-02-29 Changes in burp-2.0.34:
   * Add support for glibc's additional algorithms in crypt(3)-style passwords
     ("passwd" configuration option).
