--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
   * Support xattrs and acls in protocol2.
+  * Fix acl+xattr bug introduced in 2.0.28.
+  * Fix default acl bug that has existed forever.
+  * Fix acl memory leak.
 
 2016-02-29 Changes in burp-2.0.34:
   * Add support for glibc's additional algorithms in crypt(3)-style passwords
