--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -593,7 +593,7 @@ Path to exclude from the backup. You can have multiple exclude lines. Use forwar
 Not implemented.
 .TP
 \fBexclude_regex=[regular expression]\fR
-Exclude paths that match the regular expression.
+Exclude paths that match the PCRE regular expression. It must start and end with a forward slash '/'.
 .TP
 \fBinclude_ext=[extension]\fR
 Extensions to include in the backup. Case insensitive. Nothing else will be included in the backup. You can have multiple include extension lines. For example, set 'txt' to include files that end in '.txt'. You need to specify an 'include' line so that burp knows where to start looking.
