--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -521,6 +521,9 @@ Allowed SSL ciphers. See openssl ciphers for details.
 \fBserver_can_restore=[0|1]\fR
 To prevent the server from initiating restores, set this to 0. The default is 1.
 .TP
+\fBserver_can_override_includes=[0|1]\fR
+To prevent the server from behing able to override your local include/exclude list, set this to 0. The default is 1.
+.TP
 \fBencryption_password=[password]\fR
 Set this to enable client side file Blowfish encryption. If you do not want encryption, leave this field out of your config file. \fBIMPORTANT:\fR Configuring this renders delta differencing pointless, since the smallest real change to a file will make the whole file look different. Therefore, activating this option turns off delta differencing so that whenever a client file changes, the whole new file will be uploaded on the next backup. \fBALSO IMPORTANT:\fR If you manage to lose your encryption password, you will not be able to unencrypt your files. You should therefore think about having a copy of the encryption password somewhere off-box, in case of your client hard disk failing. \fBFINALLY:\fR If you change your encryption password, you will end up with a mixture of files on the server with different encryption and it may become tricky to restore more than one file at a time. For this reason, if you change your encryption password, you may want to start a fresh chain of backups (by moving the original set aside, for example). Burp will cope fine with turning the same encryption password on and off between backups, and will restore a backup of mixed encrypted and unencrypted files without a problem.
 .TP
