--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -528,7 +528,7 @@ To prevent the server from being able to override your local include/exclude lis
 Set this to enable client side file Blowfish encryption. If you do not want encryption, leave this field out of your config file. \fBIMPORTANT:\fR Configuring this renders delta differencing pointless, since the smallest real change to a file will make the whole file look different. Therefore, activating this option turns off delta differencing so that whenever a client file changes, the whole new file will be uploaded on the next backup. \fBALSO IMPORTANT:\fR If you manage to lose your encryption password, you will not be able to unencrypt your files. You should therefore think about having a copy of the encryption password somewhere off-box, in case of your client hard disk failing. \fBFINALLY:\fR If you change your encryption password, you will end up with a mixture of files on the server with different encryption and it may become tricky to restore more than one file at a time. For this reason, if you change your encryption password, you may want to start a fresh chain of backups (by moving the original set aside, for example). Burp will cope fine with turning the same encryption password on and off between backups, and will restore a backup of mixed encrypted and unencrypted files without a problem.
 .TP
 \fBglob_after_script_pre=[0|1]\fR
-Set this to 0 if you do not want files created by pre scripts to be evaluated by the include_glob directives. The default is 1.
+Set this to 0 if you do not want include_glob settings to be evaluated after the pre script is run. The default is 1.
 .TP
 \fBbackup_script_pre=[path]\fR
 Path to a script to run before a backup. The arguments to it are 'pre', 'reserved2' to 'reserved5', and then arguments defined by backup_script_pre_arg - unless the option 'backup_script_reserved_args' is off, then only arguments defined by backup_script_pre_arg are passed to it.
