--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -460,6 +460,9 @@ Choose which style of backups and restores to use. 0 (the default) automatically
 \fBpassword=[password]\fR
 Defines the password to send to the server.
 .TP
+\fBdisabled=[0|1]\fR
+Set this to 1 if you want to disable a client. The default is 0. This option can also be set in the client configuration files in clientconfdir on the server.
+.TP
 \fBlockfile=[path]\fR
 Path to the lockfile that ensures that two client processes cannot run
 simultaneously (this currently doesn't work on Windows).
