--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -427,6 +427,9 @@ The name that the server will put into its own SSL certficates when using the ca
 \fBca_burp_ca=[path]\fR
 Path to the burp_ca script when using the ca_conf option.
 .TP
+\fBca_crl=[path]\fR
+Override the default path to the certificate revocation list.
+.TP
 \fBca_crl_check=[0|1]\fR
 Whether to check for revoked certificates in the certificate revocation list.
 .TP
