--- a/TODO
+++ b/TODO
@@ -10,7 +10,7 @@ roughly in order of most important to least.
 * Need to improve restore speed - come up with a way to efficiently read the
   blocks into memory by looking ahead in the manifests.
 
-* maybe_copy_data_files_across() is probably broken.
+* restore_spool is probably broken.
 
 * Make the status monitor work.
 
