--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -38,39 +38,10 @@ Print an index table of symbols that humans may see burp produce, and exit.
 \fB\-a c\fR \fB\fR
 Run as a stand-alone champion chooser process (useful for debugging protocol2 style backups).
 .TP
-\fB\-a s\fR \fB\fR
-Run this to connect to a running server to get a live monitor of the status of all your backup clients. If your server config file is not in the default location, you will also need to specify the path with the '\-c' option. The live monitor requires ncurses support at compile time.
-.TP
-\fB\-a S\fR \fB\fR
-Similar to '\-a s', but it prints the main status monitor summary screen to stdout. One application is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support. There are additional options that can be given with '\-a S', listed below.
-.TP
 ADDITIONAL SERVER OPTIONS TO USE WITH '\-a c'
 .TP
 \fB\-C\fR \fB[client]\fR
 Run as if forked via a connection from this client.
-.TP
-ADDITIONAL SERVER OPTIONS TO USE WITH '\-a s'
-.TP
-\fB\-l\fR \fB[path]\fR
-Log file for status monitor - useful for debugging.
-.TP
-ADDITIONAL SERVER OPTIONS TO USE WITH '\-a S'
-.TP
-\fB\-C\fR \fB[client]\fR
-Limit the output to a single client.
-.TP
-\fB\-b\fR \fB[number]\fR
-Show listable files in a particular backup (requires \-C).
-.TP
-\fB\-z\fR \fB[file]\fR
-Dump a particular log file in a backup (requires \-C and \-b).
-.TP
-\fB\-d\fR \fB[path]\fR
-Show a particular path in a backup (requires \-C and \-b).
-.TP
-\fB\-l\fR \fB[path]\fR
-Log file for status monitor - useful for debugging.
-.TP
 
 .SH CLIENT OPTIONS
 .TP
@@ -113,6 +84,30 @@ Dry-run mode to test config file syntax.
 .TP
 \fB\-x\fR
 For Windows clients only - do not use the Windows VSS API on restore. Give this option when you are restoring a backup that contains no VSS information.
+.TP
+\fB\-a s\fR \fB\fR
+Run this to connect to a running server to get a live monitor of the status of all your backup clients. The live monitor requires ncurses support at compile time.
+.TP
+\fB\-a S\fR \fB\fR
+Similar to '\-a s', but it prints the main status monitor summary screen to stdout. One application is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support. There are additional options that can be given with both these options, listed below.
+
+.TP
+ADDITIONAL CLIENT OPTIONS TO USE WITH '\-a s' and '\-a S'
+.TP
+\fB\-C\fR \fB[client]\fR
+Limit the output to a single client.
+.TP
+\fB\-b\fR \fB[number]\fR
+Show listable files in a particular backup (requires \-C).
+.TP
+\fB\-z\fR \fB[file]\fR
+Dump a particular log file in a backup (requires \-C and \-b).
+.TP
+\fB\-d\fR \fB[path]\fR
+Show a particular path in a backup (requires \-C and \-b).
+.TP
+\fB\-l\fR \fB[path]\fR
+Log file for status monitor - useful for debugging.
 
 .SH EXAMPLES
 .TP
@@ -184,6 +179,15 @@ Long list the top level directory of backup 1 on client 'altclient'.
 .TP
 \fBburp \-C altclient \-a r \-b 1 \-r myregex \-d /tmp/restoredir\fR
 Restores all the files in backup number 1 from client 'altclient' that match the regular expression 'myregex' into the directory /tmp/restoredir.
+.TP
+\fBburp \-a s\fR
+Run the ncurses status monitor.
+.TP
+\fBburp \-a S\fR
+Print a status monitor snapshot, summarising all clients.
+.TP
+\fBburp \-a S \-C testclient\fR
+Print a status monitor snapshot, showing client 'testclient' only.
 
 .SH SERVER CONFIGURATION FILE OPTIONS
 
