--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -210,6 +210,9 @@ Defines the main TCP address that the server listens on for status requests. The
 \fBstatus_port=[port number]\fR
 Defines the TCP port that the server listens on for status requests. Comment this out to have no status server.
 .TP
+\fBcname_lowercase=[0|1]\fR
+Whether to force lowercase cname when looking-up in clientconfdir. The default is 0.
+.TP
 \fBdaemon=[0|1]\fR
 Whether to daemonise. The default is 1.
 .TP
