add: new cname_fqdn option to allow stripping FQDN (#455)
* add: new cname_fqdn option to allow stripping FQDN

* tidy up strip_fqdn so we don't have to deal with memory allocation errors

* enhance cname_lowercase and cname_fqdn documentation

* fix: remove extra strchr

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -211,7 +211,9 @@ Defines the main TCP address that the server listens on for status requests. The
 Defines the TCP port that the server listens on for status requests. Comment this out to have no status server.
 .TP
 \fBcname_lowercase=[0|1]\fR
-Whether to force lowercase cname when looking-up in clientconfdir. The default is 0.
+Whether to force lowercase cname when looking-up in clientconfdir. This also affects the fqdn lookup on the client (see client configuration options for details). The default is 0. When set to 1 the name provided by the client while authenticating will be lowercased.
+\fBcname_fqdn=[0|1]\fR
+Whether to keep fqdn cname (like 'testclient.example.com') when looking-up in clientconfdir. This also affects the fqdn lookup on the client (see client configuration options for details). The default is 1. When set to 0, the fqdn provided by the client while authenticating will be stripped ('testclient.example.com' becomes 'testclient').
 .TP
 \fBdaemon=[0|1]\fR
 Whether to daemonise. The default is 1.
@@ -466,6 +468,10 @@ Defines the TCP port that the server is listening on.
 .TP
 \fBcname=[password]\fR
 Defines the client name to identify as to the server.
+\fBcname_lowercase=[0|1]\fR
+Whether to force lowercase cname when detecting cname automatically (ie. no cname provided above). The default is 0. When set to 1 the name returned by the get_fqdn function will be lowercased.
+\fBcname_fqdn=[0|1]\fR
+Whether to keep fqdn cname (like 'testclient.example.com') when detecting cname automatically (ie. no cname provided above). The default is 1. When set to 0, the fqdn returned by the get_fqdn function will be stripped ('testclient.example.com' becomes 'testclient').
 .TP
 \fBprotocol=[0|1|2]\fR
 Choose which style of backups and restores to use. 0 (the default) automatically decides based on the server version and which protocol is set on the server side. 1 forces protocol1 style (file level granularity with a pseudo mirrored storage on the server and optional rsync). 2 forces protocol2 style (inline deduplication with variable length blocks). If you choose a forced setting, it will be an error if the server also chooses a forced setting.
